# citilink-parser

./: .gitignore  README.md  example.env  main.py  pyproject.toml  requirements.txt
app/: handlers.py  keyboars.py
src/: config.py  logger.py  models.py  parser.py  utils.py
test/: test_parser.py  test_result.csv  test_result.json
